large refactor to split ease of use and binding portions, make ease of use in general better
in particular:
- move most of the main things to React.Primitive and leave the haskell typed Properties, state handling functions, types, and Spec in React module, which now re-exports most of React.Primitive except where it overlaps these. The idea is that most users would import React only and only peek behind the curtain where specifically needed to get at primitive props and state.
- introduce ToProps and ToChildren type classes so that createElement, runFactory, etc can all work on any appropriate source of properties or children.
- clean up some instances of inconsistent naming (e.g. factoryVal).
- remove the React prefix from everything. users who want that prefix can import qualified and get it uniformly or selectively.
- remove ReactText and consolidate its instances into ToNode (née ToReactNode)
- put the project up against the Wall (and Werror) and fix shadowing and other minor nags that Wall has.

--- a/ghcjs-react.cabal
+++ b/ghcjs-react.cabal
@@ -34,9 +34,11 @@ flag addons
 
 library
   default-language:    Haskell2010
+  ghc-options:         -Wall -Werror
   exposed-modules:     React,
                        React.DOM,
-                       React.DOM.Utils
+                       React.DOM.Utils,
+                       React.Primitive
   if flag(addons)
      exposed-modules:  React.Addons
   -- other-modules:       
