undo most of 8fc1410d but keep ToChildren, remove Properties and instead provide getProps which decodes
still trying to hit something that works smoothly

--- a/ghcjs-react.cabal
+++ b/ghcjs-react.cabal
@@ -43,8 +43,7 @@ library
   ghc-options:         -Wall -Werror
   exposed-modules:     React,
                        React.DOM,
-                       React.DOM.Utils,
-                       React.Primitive
+                       React.DOM.Utils
   if flag(addons)
      exposed-modules:  React.Addons
   default-extensions:  RankNTypes
